--- a/index.html
+++ b/index.html
@@ -7,5 +7,15 @@
 </head>
 <body>
     <h1>hello..</h1>
+    <table>
+        <tr>
+            <th>Header 1</th>
+            <th>Header 2</th>
+        </tr>
+        <tr>
+            <td>Data 1</td>
+            <td>Data 2</td>
+        </tr>
+    </table>
 </body>
 </html>
