--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <td>Data 1</td>
             <td>Data 2</td>
         </tr>
+        <tr>
+            <td>Data 3</td>
+            <td>Data 4</td>
     </table>
 </body>
 </html>
